--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -1,5 +1,5 @@
 .homepage {
-  height: calc(100vh - 5rem);
+  height: calc(100dvh - 5rem);
   margin: 2.5rem;
   background-image: linear-gradient(rgba(36, 42, 46, 0.8), rgba(36, 42, 46, 0.8)), url("img/bg.jpg");
   background-size: cover;
