--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -1,7 +1,7 @@
 .homepage {
   height: calc(100dvh - 5rem);
   margin: 2.5rem;
-  background-image: linear-gradient(rgba(36, 42, 46, 0.8), rgba(36, 42, 46, 0.8)), url("img/bg.jpg");
+  background-image: linear-gradient(rgba(36, 42, 46, 0.8), rgba(36, 42, 46, 0.8)), url("/bg.jpg");
   background-size: cover;
   background-position: center;
   padding: 2.5rem 5rem;
